# tempfile

./: CMakeLists.txt  README.md
cmake/: tempfileConfig.cmake
include/: tempfile.hpp
